--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "sharif-22",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
